added changes for cleaner javascript function

--- a/web_fundamentals/javascript/likes/index.html
+++ b/web_fundamentals/javascript/likes/index.html
@@ -25,8 +25,8 @@
             <div class="row">
                 <div class="top">
                     <h4>Neil M</h4>
-                    <h4 class="likesOne"></h4>
-                    <button onclick="increaseOne()">Like</button>
+                    <h4 class="likesOne"> 9 like(s)</h4>
+                    <button onclick="increase(0)">Like</button>
                 </div>
                 <div class="bottom">
                     <p>I just set up this new discord bot, let me</p>
@@ -36,8 +36,8 @@
             <div class="row">
                 <div class="top">
                     <h4>Nichole K</h4>
-                    <h4 class="likesTwo"></h4>
-                    <button onclick="increaseTwo()">Like</button>
+                    <h4 class="likesTwo">12 like(s)</h4>
+                    <button onclick="increase(1)">Like</button>
                 </div>
                 <div class="bottom">
                     <p>Just finished my <a href="#">next comic</a>, check it out.</p>
@@ -46,8 +46,8 @@
             <div class="row">
                 <div class="top">
                     <h4>Jim R</h4>
-                    <h4 class="likesThree"></h4>
-                    <button onclick="increaseThree()">Like</button>
+                    <h4 class="likesThree">9 like(s)</h4>
+                    <button onclick="increase(2)">Like</button>
                 </div>
                 <div class="bottom">
                     <p>I can't stop listening to the <a href="#">new album.</a></p>
